fixed new suite bugs